# hyclone

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build_hprefix.sh  copy_objects.sh
.github/: FUNDING.yml
haiku_loader/: CMakeLists.txt  haiku_loader.h  loader_commpage.h  loader_debugger.cpp  loader_debugger.h  loader_elf.cpp  loader_elf.h  loader_exec.h  loader_fork.h  loader_idmap.cpp  loader_idmap.h  loader_ids.h  loader_loadruntime.h  loader_lock.cpp  loader_lock.h  loader_mutex.cpp  loader_mutex.h  loader_process.h  loader_protectedfd.h  loader_pty.h  loader_readdir.h  loader_registration.h  loader_requests.cpp  loader_requests.h  loader_reservedrange.cpp  loader_reservedrange.h  loader_runtime.h  loader_semaphore.h  loader_servercalls.h  loader_signal.h  loader_spawn.h  loader_spawn_thread.h  loader_sysinfo.h  loader_systemtime.cpp  loader_systemtime.h  loader_tls.cpp  loader_tls.h  loader_vchroot.h  main.cpp
haiku_loader/sys/linux/: loader_commpage.cpp  loader_debugger.cpp  loader_exec.cpp  loader_fork.cpp  loader_ids.cpp  loader_loadruntime.cpp  loader_process.cpp  loader_pty.cpp  loader_readdir.cpp  loader_registration.cpp  loader_requests.cpp  loader_runtime.cpp  loader_semaphore.cpp  loader_servercalls.cpp  loader_signal.cpp  loader_spawn.cpp  loader_spawn_thread.cpp  loader_sysinfo.cpp  loader_systemtime.cpp  loader_vchroot.cpp
hpkgvfs_analyze/: CMakeLists.txt
hpkgvfs_analyze/include/hpkgvfs/: Entry.h  Package.h
hpkgvfs_analyze/src/: hpkgvfs_analyze.cpp
hpkgvfs_analyze/src/lib/: Entry.cpp  Package.cpp
hpkgvfs_analyze/src/lib/sys/linux/: FileSystem.cpp
hyclone_server/: CMakeLists.txt  area.cpp  area.h  associateddata.cpp  associateddata.h  debug.cpp  entry_ref.cpp  entry_ref.h  hsemaphore.cpp  hsemaphore.h  id_map.h  image.cpp  io_context.cpp  io_context.h  kmessage.cpp  kmessage.h  main.cpp  port.cpp  port.h  process.cpp  process.h  server_apploadnotification.cpp  server_apploadnotification.h  server_debug.cpp  server_debug.h  server_dispatch.cpp  server_errno.cpp  server_errno.h  server_filesystem.cpp  server_filesystem.h  server_main.h  server_memory.cpp  server_memory.h  server_messaging.cpp  server_messaging.h  server_native.h  server_nodemonitor.cpp  server_nodemonitor.h  server_notificationimpl.cpp  server_notificationimpl.h  (+22 more)
hyclone_server/fs/: bindfs.cpp  bindfs.h  devfs.cpp  devfs.h  hostfs.cpp  hostfs.h  packagefs.cpp  packagefs.h  rootfs.cpp  rootfs.h  systemfs.cpp  systemfs.h
hyclone_server/sys/linux/: server_errno.cpp  server_filesystem.cpp  server_inotify.cpp  server_main.cpp  server_memory.cpp  server_native.cpp  server_systemtime.cpp  server_usermap.cpp
hyclonefs_analyze/: CMakeLists.txt  main.cpp
libhpkg/: CMakeLists.txt  LICENSE.md  README.md
libhpkg/include/libhpkg/: AttributeContext.h  AttributeIterator.h  FileHelper.h  HpkException.h  HpkStringTable.h  HpkgFileExtractor.h  HpkgHeader.h  StringTable.h
libhpkg/include/libhpkg/Compat/: ByteArrayByteSource.h  ByteSource.h
libhpkg/include/libhpkg/Heap/: HeapCompression.h  HeapCoordinates.h  HeapInputStream.h  HeapReader.h  HpkHeapReader.h
libhpkg/include/libhpkg/Helpers/: StringHelpers.h
libhpkg/include/libhpkg/Model/: Attribute.h  AttributeId.h  AttributeType.h  FileAttributesValues.h  FileType.h  IntAttribute.h  PkgArchitecture.h  PkgUrl.h  PkgUrlType.h  PkgVersion.h  RawAttribute.h  RawHeapAttribute.h  RawInlineAttribute.h  StringAttribute.h  StringInlineAttribute.h  StringTableRefAttribute.h
libhpkg/src/: AttributeIterator.cpp  FileHelper.cpp  HpkStringTable.cpp  HpkgFileExtractor.cpp
libhpkg/src/Compat/: ByteSource.cpp
libhpkg/src/Heap/: HeapInputStream.cpp  HpkHeapReader.cpp
libhpkg/src/Helpers/: StringHelpers.cpp
libhpkg/src/Model/: Attribute.cpp  AttributeId.cpp  FileAttributesValues.cpp  PkgUrl.cpp  PkgVersion.cpp
libhpkg/tests/: CMakeLists.txt  test_dumpfiles.cpp  tipster-1.1.1-1-x86_64.hpkg
libhpkg_old/: CMakeLists.txt  LICENSE.md  README.md
libhpkg_old/include/: hpkg.h
libhpkg_old/src/: hpkg.cpp
libhyclonefs/: CMakeLists.txt  README.md  hyclonefs.cpp
libhyclonefs/devfs/: RandomVNode.cpp  RandomVNode.h  RootVNode.cpp  RootVNode.h  StatData.h  Tree.cpp  Tree.h  VNode.cpp  VNode.h  Volume.cpp  Volume.h  devfs.h  kernel_interface.cpp
libhyclonefs/fs_shell/: CMakeLists.txt
libhyclonefs/include/: hyclonefs.h
libhyclonefs/libroot_host/: CMakeLists.txt
libroot/: CMakeLists.txt  determine_hyclone_revision.cpp  libgcc_s.so.1  set_hyclone_revision.sh
libroot/os/: CMakeLists.txt  system_time.cpp  time.cpp  tls.cpp
libroot/posix/: CMakeLists.txt
libroot/posix/signal/: CMakeLists.txt  signal_limits.cpp
libroot/posix/stdlib/: CMakeLists.txt  pty.cpp
monika/: CMakeLists.txt
monika/dispatcher/: CMakeLists.txt  export.h  gensyscalls.cpp  ksyscalls.h
monika/linux/: CMakeLists.txt  debug.cpp  disk.cpp  errno_conversion.cpp  errno_conversion.h  fcntl.cpp  fcntl_conversion.cpp  fcntl_conversion.h  fcntl_values.h  generic.cpp  generic_syscall.cpp  image.cpp  io.cpp  ioctl.cpp  ioctl_values.h  ipc.cpp  linux_cpu_timers.h  linux_debug.cpp  linux_debug.h  linux_subsystemlock.h  linux_syscall.S  linux_syscall.h  linux_version.cpp  linux_version.h  mman.cpp  poll_values.h  process.cpp  realpath.cpp  realpath.h  rlimit.cpp  rlimit_values.h  shutdown.cpp  signal.cpp  signal_conversion.cpp  signal_conversion.h  signal_restore.S  signal_values.h  socket.cpp  socket_conversion.cpp  socket_conversion.h  (+9 more)
runtime_loader/: CMakeLists.txt
shared_headers/: BeDefs.h  LICENSE.md  TypeConstants.h  commpage_defs.h  extended_commpage.h  extended_signal.h  extended_system_info_defs.h  haiku_area.h  haiku_debugger.h  haiku_dirent.h  haiku_drivers.h  haiku_errors.h  haiku_fcntl.h  haiku_file.h  haiku_fs_attr.h  haiku_fs_info.h  haiku_fs_volume.h  haiku_image.h  haiku_ioctl.h  haiku_net_if.h  haiku_net_if_dl.h  haiku_net_route.h  haiku_netinet_in.h  haiku_netinet_tcp.h  haiku_poll.h  haiku_port.h  haiku_scheduler.h  haiku_sem.h  haiku_semaphore.h  haiku_signal.h  haiku_socket.h  haiku_sockio.h  haiku_stat.h  haiku_sysinfo.h  haiku_team.h  haiku_termios.h  (+16 more)
(+8 files in other folders)
